Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Scope.out
Scope.java:12:4: compiler.err.cant.resolve: kindname.variable, red, , 
1 error
